tests/ui/did_you_mean/issue-38147-2.stderr
error[E0596]: cannot borrow `*self.s` as mutable, as it is behind a `&` reference
  --> $DIR/issue-38147-2.rs:9:9
   |
LL |         self.s.push('x');
   |         ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     s: &'a mut String,
   |            +++

error[E0596]: cannot borrow `*self.longer_name` as mutable, as it is behind a `&` reference
  --> $DIR/issue-38147-2.rs:12:9
   |
LL |         self.longer_name.push(13);
   |         ^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     longer_name:   &   'a mut Vec<u8>
   |                           +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
